[gd_scene load_steps=4 format=3 uid="uid://cdc6lfjuxxbia"]

[ext_resource type="Script" path="res://scenes/UI/team_UI_stuff/panel_char.gd" id="1_4c8rn"]
[ext_resource type="Texture2D" uid="uid://ci6hb127q6kmh" path="res://characters/knight/knight_portrait.tres" id="2_0g85w"]
[ext_resource type="LabelSettings" uid="uid://buthhqor0rds0" path="res://resources/font_settings/font_system_desc.tres" id="3_0t8gu"]

[node name="Panel_Char1" type="Panel"]
offset_right = 112.0
offset_bottom = 61.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("1_4c8rn")

[node name="Sprite2D_portrait" type="Sprite2D" parent="."]
position = Vector2(94, 19)
scale = Vector2(3, 3)
texture = ExtResource("2_0g85w")

[node name="VBoxContainer_info" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_constants/separation = 1

[node name="Label_name" type="Label" parent="VBoxContainer_info"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "[1] Knight"
label_settings = ExtResource("3_0t8gu")

[node name="Label_health" type="Label" parent="VBoxContainer_info"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "HP: 50/50"
label_settings = ExtResource("3_0t8gu")

[node name="Label_ammo" type="Label" parent="VBoxContainer_info"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Ammo: 9/9 "
label_settings = ExtResource("3_0t8gu")

[node name="Label_charge" type="Label" parent="VBoxContainer_info"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Charge: 0/100"
label_settings = ExtResource("3_0t8gu")
